<resources>
    <string name="app_name">Caravan-12</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="buttonSignIn">Войти</string>
    <string name="buttonSignUp">Зарегистрироваться</string>
    <string name="empty_fields_warning">Все поля должны быть заполнены!</string>
    <string name="textViewForgotPassword">Забыли пароль?</string>
    <string name="strEmail">E-mail</string>
    <string name="strPhoneNumber">Телефон</string>
    <string name="strPassword">Пароль</string>
    <string name="strRepeatPassword">Повторите пароль</string>
    <string name="tViewSignUp">Регистрация</string>
    <string name="strName">Имя</string>
    <string name="strSecondName">Фамилия</string>
    <string name="textViewBackToLogin">Уже есть аккаунт?</string>
    <string name="fillTheApplication">Заполните форму, а наш менеджер подберет для вас тур!</string>
    <string name="dialog_address">Адрес</string>
    <string name="dialog_contacts">Контакты</string>
    <string name="dialog_companyNumber">(8552) 380012, 391070\n+79196213060</string>
    <string name="dialog_companyEmail">karavan12@mail.ru</string>
    <string name="dialog_companyAddress">г. Набережные Челны, пр. Хасана Туфана д.29 «А» (14/05 «А»), 1 под, 2 эт, оф.1</string>
    <string name="floatingButtonDialogBackToInfoFragment">Вернуться на информационную вкладку</string>
    <string name="empty">null</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tvInformationAboutMessengers">Не нашли ответ? \nНапишите нам в мессенджере или позвоните!</string>
    <string name="buttonResetPassword">Сбросить пароль</string>
    <string name="questionAboutUs">О нас</string>
    <string name="questionHotTour">Что такое Горящий тур</string>
    <string name="questBaggage">Багаж</string>
    <string name="questLookForAndBuy">Как искать и покупать туры</string>
    <string name="questWishings">Где указать пожелания к туру</string>
    <string name="questWithPets">Правила путешествия с домашними питомцами</string>
    <string name="questWhatDocuments">Какие документы понадобятся для поездки</string>
    <string name="questCheckIn">Время заселения и выезда из отеля</string>
    <string name="questSendApplication">Как оставлять заявку на подбор тура</string>
    <string name="questTips">Полезные советы для путешествий</string>
    <string name="questPAcking">Собираем чемодан в дорогу</string>
    <string name="questDifference">Разница между чартером и регулярным рейсом</string>
    <string name="error_et_name">Введите имя</string>
    <string name="error_ed_email">Введите свой e-mail</string>
    <string name="error_et_number">Введите свой номер телефона</string>
    <string name="error_et_password">Придумайте пароль</string>
    <string name="error_et_repeatedpassword">Повторите пароль</string>
    <string name="error_wrongFormat_email">Неверный формат электронной почты</string>
    <string name="error_wrongFormat_number">Неверный формат номера телефона</string>
    <string name="error_wrongFormat_password">Пароль должен содержать 6 знаков и больше</string>
    <string name="error_passwords_not_match">Пароли не совпадают</string>
    <string name="error_empty_field">Данное поле должно быть заполнено</string>
    <string name="strSuccessSignUp">Вы успешно зарегистрировались</string>
    <string name="strResetPassword">Сброс пароля</string>
    <string name="strResetPasswordToEmail">Ссылка для сброса пароля будет отправлена на почту, которую вы указали при регистрации</string>
    <string name="hintDateOfDeparture">Дата отъезда</string>
    <string name="hintNights">Количество ночей</string>
    <string name="hintNumberOfPeople">Количество отдыхающих</string>
    <string name="hintFrom">Откуда</string>
    <string name="hintWhere">Место</string>
    <string name="hintComments">Пожелания</string>
    <string name="buttonSendApplication">Оставить заявку</string>
    <string name="strFindAnswersAmongArticles">Найдите ответ среди самых часто задаваемых вопросов</string>
    <string name="strOurContacts">Наши контакты</string>
    <string name="strCallUs">Позвонить</string>
    <string name="buttonSignOut">Выйти из аккаунта</string>
    <string name="strSendEmailToVerify">Выслать письмо для подтверждения электронной почты</string>
    <string name="nav_menu_site">Выбрать тур на сайте</string>
    <string name="nav_menu_tourRequest">Подбор тура</string>
    <string name="nav_menu_info">Информационная вкладка</string>
    <string name="nav_menu_myAccount">Мой профиль</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="strTop">Топ направлений</string>
    <string name="strTurkey">Турция</string>
    <string name="strDominikana">Доминикана</string>
    <string name="strThailand">Тайланд</string>
    <string name="strVietnam">Вьетнам</string>
    <string name="strAgreement">Я согласен на обработку персональных данных</string>
    <string name="nav_menu_homePage">На главную</string>
    <string name="str_error">Что-то пошло не так</string>
    <string name="info_wait_answer_in_email">Ожидайте ответ на вашу электронную почту</string>
    <string name="error_while_sending">При отправке произошла ошибка</string>
    <string name="warning_email_not_verified">Ваша почта не подтверждена</string>
    <string name="error_checkbox_not_checked">Для того чтобы зарегистрироваться, вам нужно поставить здесь галочку</string>
    <string name="info_account_deleted">Аккаунт удален</string>
    <string name="info_password_reset">Пароль сброшен. Проверьте свою электронную почту</string>
    <string name="warn_user_not_found">Пользователь не найден</string>
    <string name="info_login_as">\"Вы вошли как \"</string>
    <string name="fill_email_field">Пожалуйста, укажите свою электронную почту в поле для электронной почты</string>
    <string name="to_email">\"На почту \"</string>
    <string name="email_verification_sent">\" было оптравлено письмо для подтверждения адреса электронной почты\"</string>
    <string name="choose_spinner">Выберите вариант из списка</string>
    <string name="tvUnderlinedApplications"><u>Ваши заявки</u></string>
    <string name="tvUnderlinedDeleteApplication"><u>Удалить заявку</u></string>
    <string name="error_try_to_restart">Произошла ошибка при получении данных пользователя. Пожалуйста, попробуйте перезайти в аккаунт</string>
    <string name="error_loadind_data">Произошла ошибка при загрузке данных</string>
    <string name="str_signIn_error">Неправильный адрес электронной почты или пароль</string>

    <string-array name="meals">
        <item>Всё включено ультра, UAI</item>
        <item>Всё включено, AI</item>
        <item>Трехразовое ультра, FB+</item>
        <item>Трехразовое, FB</item>
        <item>Двухразовое ультра, HB+</item>
        <item>Двухразовое, HB</item>
        <item>Только завтраки, BB</item>
        <item>Самообслуживание, SC</item>
        <item>Без питания, RO</item>
    </string-array>

    <string-array name="rating">
        <item>5*</item>
        <item>4*</item>
        <item>3*</item>
        <item>2*</item>
        <item>Apts</item>
        <item>Villas</item>
        <item>HV-1</item>
        <item>HV-2</item>
    </string-array>

</resources>