<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/nav_header_light_gradient">

            <TextView
                android:id="@+id/tvResetPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/alegreya_medium"
                android:text="@string/strResetPassword"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvResetPassword"
                app:layout_constraintStart_toStartOf="@id/tvResetPassword"
                app:layout_constraintEnd_toEndOf="@id/tvResetPassword"
                android:text="@string/strResetPasswordToEmail"
                android:textSize="18sp"
                android:fontFamily="@font/alegreya_regular"
                android:padding="15dp"
                android:textAlignment="center"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonResetPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/alegreya_medium"
                android:padding="10dp"
                android:text="@string/buttonResetPassword"
                app:backgroundTint="@android:color/holo_orange_dark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tvEmail"
                app:layout_constraintStart_toStartOf="@id/tvEmail"
                app:layout_constraintTop_toBottomOf="@id/tvEmail" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>