<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_gravity="center"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/dismissDialogButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_close"
                android:clickable="true"
                app:backgroundTint="@android:color/holo_orange_light"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_close"
                android:focusable="true" />

            <TextView
                android:id="@+id/textViewPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/alegreya_medium"
                android:text="@string/strPhoneNumber"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewContacts"
                app:layout_constraintHorizontal_bias="0.649"
                app:layout_constraintStart_toEndOf="@+id/imageViewPhone"
                app:layout_constraintTop_toBottomOf="@+id/textViewContacts" />

            <TextView
                android:id="@+id/textViewEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                android:fontFamily="@font/alegreya_medium"
                android:text="@string/strEmail"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewPhoneNumber"
                app:layout_constraintHorizontal_bias="0.753"
                app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />

            <TextView
                android:id="@+id/textViewAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/alegreya_medium"
                android:text="@string/dialog_address"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="@+id/textViewEmail"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewMap"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

            <TextView
                android:id="@+id/textViewContacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/alegreya_medium"
                android:text="@string/dialog_contacts"
                android:textAlignment="center"
                android:textColor="@android:color/holo_orange_light"
                android:textSize="32sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.475"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewPhone"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:contentDescription="@null"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewContacts"
                app:srcCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/alegreya_regular"
                android:text="@string/dialog_companyNumber"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toEndOf="@+id/imageViewPhone"
                app:layout_constraintTop_toBottomOf="@+id/textViewPhoneNumber" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/alegreya_regular"
                android:text="@string/dialog_companyEmail"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
                app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/alegreya_regular"
                android:text="@string/dialog_companyAddress"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageViewEmail"
                app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

            <ImageView
                android:id="@+id/imageViewEmail"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="64dp"
                android:contentDescription="@null"
                app:layout_constraintStart_toStartOf="@+id/imageViewPhone"
                app:layout_constraintTop_toBottomOf="@+id/imageViewPhone"
                app:srcCompat="@drawable/ic_email" />

            <ImageView
                android:id="@+id/imageViewMap"
                android:layout_width="65dp"
                android:layout_height="65dp"
                android:layout_marginTop="36dp"
                android:contentDescription="@null"
                app:layout_constraintStart_toStartOf="@+id/imageViewEmail"
                app:layout_constraintTop_toBottomOf="@+id/imageViewEmail"
                app:srcCompat="@drawable/ic_map" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>